--- a/styles/main.css
+++ b/styles/main.css
@@ -3,11 +3,19 @@ body
 	font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background: -webkit-gradient(linear, left bottom, right top, from(#fc2c77), to(#6c4079));
-    background: -webkit-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
-    background: -moz-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
-    background: -o-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
-    background: linear-gradient(to top right, #fc2c77 0%, #6c4079 100%);
+	padding: 0 0 50px 0;
+	background-image: linear-gradient( 109.6deg,  rgba(170,255,169,1) 11.2%, rgba(17,255,189,1) 91.1% );
+}
+.navbar
+{
+	border-bottom-left-radius: 7px;
+	border-bottom-right-radius: 7px;
+	margin-bottom: 4px;
+}
+.langIco
+{
+	width: 20px;
+	padding-right: 3px;
 }
 .vertical-center
 {
@@ -20,17 +28,17 @@ body
 {
 	background-color: #fff;
 	padding: 30px;
-	border-radius: 5px;
-	box-shadow: 1px 4px 20px rgba(0,0,0,0.3);
+	border-radius: 7px;
+	box-shadow: 1px 4px 20px rgba(0,0,0,0.1);
 	transition: box-shadow .3s ease-in-out;
 }
 .regForm:hover
 {
-	box-shadow: 1px 4px 20px rgba(0,0,0,1);
+	box-shadow: 1px 4px 20px rgba(0,0,0,0.3);
 }
 .container-lg
 {
-	max-width: 728px;	
+	max-width: 828px;	
 }
 .profileImageParent
 {
@@ -46,13 +54,14 @@ body
 	width: 120px;
 	height: 120px;
 	border-radius: 50%;
-	background-image: url(../img/default_profile.svg);
+	background-image: url(../img/default_profile_pic.png);
 	-webkit-background-size: 100%;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-position: center center;
 	border: 1px solid #d5d5d5;
 	transition: border .3s ease-in-out;
+	opacity: 0.9;
 }
 .profileImageChange
 {
@@ -95,4 +104,52 @@ body
 		-webkit-background-size: 30%;
 		background-size: 30%;
 	}
+}
+.carousel-inner
+{
+	width: 100%;
+	height: 400px;
+	border-radius: 15px;
+}
+.carousel-inner .carousel-item
+{
+	height: 100%;
+	width: 100%;
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: center center;
+}
+.carousel-inner .carousel-item:nth-child(1)
+{
+	background-image: url(../img/slides/chris.jpg);
+}
+.carousel-inner .carousel-item:nth-child(2)
+{
+	background-image: url(../img/slides/Billie.jpg);
+}
+.carousel-inner .carousel-item:nth-child(3)
+{
+	background-image: url(../img/slides/playboi.jpg);
+}
+.carousel-inner .carousel-item:nth-child(4)
+{
+	background-image: url(../img/slides/asapi.jpg);
+}
+.carousel-inner .carousel-item:nth-child(5)
+{
+	background-image: url(../img/slides/drake.jpg);
+}
+.carousel-inner .carousel-item:nth-child(6)
+{
+	background-image: url(../img/slides/lilpump.jpg);
+}
+.textRandom
+{
+	margin-top: 4px;
+	border-radius: 7px;
+}
+.btn-custom
+{
+	background-color: rgba(0, 199, 116, 1);
+	color: #fff;
 }
