--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@ body
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	padding: 0 0 50px 0;
-	background-image: linear-gradient( 109.6deg,  rgba(170,255,169,1) 11.2%, rgba(17,255,189,1) 91.1% );
+	background-color: #46484A;
 }
 .navbar
 {
